entity, 아이디, 비밀번호 찾기 기능 구현

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Hi</title>
 </head>
 <body>
-<p> Hello fighting </p>
+<p> Let's go !!! </p>
 </body>
 </html>
