--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Login</h1>
-<form action="#" th:action="@{/api/auth/login}" method="post">
+<form action="#" th:action="@{/login}" method="post">
     <label>Email:</label>
     <input type="text" name="email" required="required"/>
     <label>Password:</label>
